# openbsd-ldapd-portable

./: .gitignore  .hgignore  Makefile.am  README.md  configure.ac
CVS/: Entries
compat/: Makefile.am  arc4random.c  arc4random.h  base64.c  compat.h  memrchr.c  vis.h
ldapctl/: Makefile.am  ldapctl.c
ldapctl/CVS/: Entries
ldapd/: Makefile.am  auth.c  ber.c  btree.c  conn.c  ldapd.c  ldapd.h  ldape.c  log.c  parse.y  uuid.c
ldapd/CVS/: Entries
ldapd/schema/CVS/: Entries
